--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Build a Single-Page App with an AVR Web API</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/app_assets/css/main.css">
-<script src="/app_assets/vendor/modernizr/modernizr.js"></script>
+<link rel="stylesheet" href="/Lab2014.SinglePageApp/app_assets/css/main.css">
+<script src="/Lab2014.SinglePageApp/app_assets/vendor/modernizr/modernizr.js"></script>
 </head>
 <body>
 <div id="wrapper" class="wrapper">
@@ -19,8 +19,8 @@
     <footer id="footer" class="footer" role="contentinfo">
     </footer><!-- #footer -->
 </div><!-- #wrapper -->
-<script src="/app_assets/vendor/requirejs/require.js"></script>
-<script src="/app_assets/js/config.js"></script>
-<script src="/app_assets/js/main.js"></script>
+<script src="/Lab2014.SinglePageApp/app_assets/vendor/requirejs/require.js"></script>
+<script src="/Lab2014.SinglePageApp/app_assets/js/config.js"></script>
+<script src="/Lab2014.SinglePageApp/app_assets/js/main.js"></script>
 </body>
 </html>
