--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Build a Single-Page App with an AVR Web API</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="/Lab2014.SinglePageApp/favicon.ico">
 <link rel="stylesheet" href="/Lab2014.SinglePageApp/app_assets/css/main.css">
 <script src="/Lab2014.SinglePageApp/app_assets/vendor/modernizr/modernizr.js"></script>
 </head>
