--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
 </head>
 <body>
 <div id="wrapper" class="wrapper">
-    <nav id="navigation" class="navigation" role="navigation">
+    <nav id="navigation" class="navigation navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div id="navbar-container" class="navbar-container container">
+            <div id="navbar-header" class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div><!-- #navbar-header -->
+            <div id="navbar-collapse" class="navbar-collapse collapse">
+                <ul id="navbar-menu" class="navbar-menu nav navbar-nav">
+                    <li><a href="/Lab2014.SinglePageApp/">Home</a></li>
+                </ul><!-- #navbar-menu -->
+            </div><!-- #navbar-collapse -->
+        </div><!-- #navbar-container -->
     </nav><!-- #navigation -->
     <header id="header" class="header" role="banner">
     </header><!-- #header -->
